Re-style documentation for simplicity.  On branch master  Your branch is up-to-date with 'github/master'.
 Changes to be committed:
	modified:   ../docs/Doxyfile
	modified:   ../docs/footer.html
	modified:   ../docs/header.html
	new file:   ../docs/layout.xml
	modified:   ../docs/stylesheet.css
	modified:   ../src/verilog_ast.h

--- a/docs/stylesheet.css
+++ b/docs/stylesheet.css
@@ -4,6 +4,9 @@ body, table, div, p, dl {
 	font: 400 14px/22px Roboto,sans-serif;
 }
 
+#navrow1{display:none;}
+#navrow2{display:none;}
+
 /* @group Heading Levels */
 
 h1.groupheader {
